====================================================

----------------------------------------------------
Version 1.13
- add new object 'filter' at application scope to manage forward messaging filter.
- sending to broadcast adress enabled
- messages received from my address are discarded to avoid loops. 
  Internal communication must make use of the local loopback (127.0.0.1).

----------------------------------------------------
Version 1.12
- 'line' objects: 'color' message is now an alias of 'penColor'
- new 'compatibility' method at application level, provided to preserve previous behaviors
- new 'foreground' method at scene level to display scene window in foreground.
- new methods ('fontSize', 'fontFamily', 'fontStyle' and 'fontWeight') to manage font of txt object.
- Remove GuidoQt library dependency and integrate source file.
- Inscrease default size of guido item.
- Add default size and font to text item to have same rendering on different plateform (default to Arial 13px)
- Add 'arrows' attribute to 'line' objects.
- The 'export' method can take multiple file path.
- new 'exportAll' method to export an object with its children.
- Add support of Qt javascript engine (QJSEngine).
- Bug correction :
	When ask for multiple exports, all are now treated and not only the last.
- incoming messages buffer size increased to 10.000
- url support for inscore files (load message)
- bug in export item corrected : child scaling was not applied.
- bug in fullscreen support corrected : the model was incorrect when switching to fullscreen using 
  the window controlers. It was resulting in spurious fullscreen mode exit.

----------------------------------------------------
Version 1.11
- new common queries ('get' message) : count and rcount that give the enclosed objects count
  and a recursive count. The messages are supported at scene and application level as well.
- new 'memimg' object that capture the image of any object hierarchy including scenes