@@ -17,6 +17,8 @@ Version 1.13
 - sending to broadcast adress enabled
 - messages received from my address are discarded to avoid loops. 
   Internal communication must make use of the local loopback (127.0.0.1).
+- bug with lines corrected: a line in non-square parent was rotated when the parent's width 
+  was smaller than its height.
 
 ----------------------------------------------------
 Version 1.12
